--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -21653,7 +21653,9 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 
 .bd-partner-sponsor img {
   border-radius: 0.5em;
+  height: auto;
   max-height: 3rem;
+  max-width: 8rem;
   width: auto;
 }
 
