--- a/sass/utilities/_all.scss
+++ b/sass/utilities/_all.scss
@@ -4,6 +4,7 @@
 @import "initial-variables";
 @import "functions";
 @import "derived-variables";
+@import "css-variables";
 @import "mixins";
 @import "controls";
 @import "extends";
